# EnergyPlusToFMU

./: README.md  legal.html
Documentation/userGuide/: Makefile
Examples/Actuator/: _fmu-export-actuator.idf
Examples/Schedule/: _fmu-export-schedule.idf
Examples/Variable/: _fmu-export-variable.idf
Scripts/: EnergyPlusToFMU.py  makeExportPrepApp.py  makeFMULib.py  makeFmuLib.py  utilManageCompileLink.py
Scripts/EnergyPlusToFMU/: EnergyPlusToFMU.py  makeExportPrepApp.py  makeFmuLib.py  makeUtilityApps.py  utilManageCompileLink.py
Scripts/darwin/: compile-cpp.sh  link-c-lib-gcc-32bit.txt  link-cpp-lib.sh  link-cpp-lib_20.sh  test-c-exe.sh
Scripts/linux/: compile-c.sh  compile-cpp-gcc-32bit.txt  link-c-exe-gcc-32bit.txt  link-c-lib.sh  link-cpp-lib-g++.txt  link-cpp-lib.sh
Scripts/win/: compile-c-mvs10.txt  compile-c.bat  compile-cpp-mvs10.txt  compile-cpp.bat  link-c-exe-mvs10.txt  link-c-exe.bat  link-c-lib-mvs10.txt  link-c-lib.bat  link-cpp-exe-mvs10.txt  link-cpp-exe.bat  test-c-exe.bat
SourceCode/EnergyPlus/: CMakeLists.txt  defines.h  dirent_win.h  fmiModelTypes.h  main.c  printdir.c  reader.c  reader.h  util.c  util.h  utilSocket.c  xml_parser_cosim.c
SourceCode/Expat/: CMakeLists.txt
SourceCode/fmu-export-prep-shared/: fmu-export-idf-data.cpp  fmu-export-prep-main.cpp
SourceCode/fmu-export-prep-src/: app-cmdln-input.cpp  app-cmdln-input.h  app-cmdln-version.cpp  app-cmdln-version.h  fmu-export-idf-data.cpp  (+8 more)
misc/: IOReferenceUpdated.docx  NFP_FunctionalMockupInterfaceExport_revised.docx  NFP_FunctionalMockupUnitExport.docx
(+240 files in other folders)
